--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
 		"@uniswap/sdk": "^3.0.3",
 		"axios": "^0.27.2",
 		"base64-arraybuffer": "^1.0.2",
+		"chart.js": "^3.9.1",
 		"ethers": "^5.7.0",
 		"nanoid": "^4.0.0",
 		"next": "12.2.5",
 		"next-auth": "^4.10.3",
 		"react": "18.2.0",
+		"react-chartjs-2": "^4.3.1",
 		"react-dom": "18.2.0",
 		"react-hot-toast": "^2.3.0",
 		"react-icons": "^4.4.0",
